--- a/sefaz-request-processor/pom.xml
+++ b/sefaz-request-processor/pom.xml
@@ -19,6 +19,13 @@
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>br.com.sigen.edoc</groupId>
+			<artifactId>sefaz-xml-parser</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
